--- a/math154/calc1home.html
+++ b/math154/calc1home.html
@@ -40,8 +40,17 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_continuity.html">Continuity</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_epsilondelta_limits.html">Formal Limits</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_limit_def_derivative.html">Limit definition of derivative</a>
-  <!--<li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_intro_calculus_and_limits.html">Calculus preview</a>
-  -->
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivative_function.html">Derivative as a function</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivative_rules.html">Derivative rules</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivative_applications1.html">Some applications of the derivative</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_trig_derivatives.html">Trigonometric derivative</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_chain_rule.html">chain rule</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_log_exp_derivatives.html">derivatives of logs and exponentials</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivatives_of_inverses.html">derivatives of inverses</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_implicit_differentiation.html">Implicit differentiation</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_related_rates.html">Related rates</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_linear_approximations_differentials.html">Linear approximations and differentials</a>
+
 </ul>
 
 
