--- a/math154/calculus1_mean_value_theorem.html
+++ b/math154/calculus1_mean_value_theorem.html
@@ -65,13 +65,16 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex3">Example</button>
   <div id="gex3" class="collapse">
     <P>Suppose \(f(0) = 2\) and \(f'(x) \geq 4 \forall x\). What can be said about values for \(f(1)\) and \(f(-3)\)?
-
+      <br>
+      <br>
+      <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_nxdvpslq&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_86x9w030" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 
   </div>
 
 <h2>Theorem - Rolle's Theorem </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex5">Theorem</button>
   <div id="gex5" class="collapse">
+    <img src="./rolles_sketch.png" width=400><br><br>
     <P><b>Theorem (Rolle's Theorem)</b> Suppose \(b > a\) and \(f\) is a continuous function on \([a,b]\),
       differentiable on \((a,b)\), and that \(f(a) = f(b)\). Then there exists a number \(c\) such that \( f'(c) = 0 \).
       <br><br>
@@ -90,13 +93,16 @@ $(function () {
     <P>Consider the function \(f(x) = x^3 - x\) on the interval \([0,1]\).
       Note that \(f\) is a polynomial, so it is both continuous and differentiable everywhere.
       Also note that \(f(0) = f(1) = 0\). By Rolle's Theorem we know there is a number \(c \in (0,1)\) such that \(f'(c) = 0\).
-      Find this number.
+      Find this number.<br>
+
+      <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_t3rb7zgk&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_hmav8h6a" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 
   </div>
 
   <h2>Theorem - Mean Value Theorem </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex51">Theorem</button>
     <div id="gex51" class="collapse">
+      <img src="./mvt_sketch.png" width=450><br><br>
       <P><b>Theorem (Mean Value Theorem)</b> Suppose \(b > a\) and \(f\) is a continuous function on \([a,b]\),
         differentiable on \((a,b)\). Then there exists a number \(c\) such that \(f'(c) = \frac{f(b) - f(a)}{b-a}\).
         <br><br>
@@ -119,7 +125,8 @@ $(function () {
       <P>Consider the function \(f(x) = x^4\) on the interval \([0,1]\).
         Note that \(f\) is a polynomial, so it is both continuous and differentiable everywhere.
         Find the number \(c \in (0,1)\) that shows the consequence of the Mean Value Theorem holds.
-
+        <br>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_bx7fkdar&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_0olnf7um" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     </div>
 
 
