--- a/math154/calc1home.html
+++ b/math154/calc1home.html
@@ -50,7 +50,7 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_implicit_differentiation.html">Implicit differentiation</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_related_rates.html">Related rates</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_linear_approximations_differentials.html">Linear approximations and differentials</a>
-
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_mean_value_theorem.html">Mean value theorem</a>
 </ul>
 
 
