--- a/math154/calculus1_linear_approximations_differentials.html
+++ b/math154/calculus1_linear_approximations_differentials.html
@@ -101,7 +101,7 @@ def tangent_line(f = input_box(default=exp(x)), xbegin = slider(-3,3,1/10,-1), x
       <dt>Let \(L(x) = y\) and rewrite this as \(L(x) = f'(x_0) (x - x_0) + f(x_0)\). </dt>
         <dd>\(L(x) = 2\pi(x-2\pi) + 1\)</dd>
       <dt>When \(x\approx x_0\) then \(L(x) \approx f(x)\) so to approximate \(f(x)\) we just evaluate \(L(x)\).</dt>
-      <dd>\(L(6) = 2\pi(6-2\pi) =  -0.7793...\). This is a pretty good approximation.</dd>
+      <dd>\(L(6) = 2\pi(6-2\pi) =  -0.7793...\). This is negative. Does that make sense? Would you trust this approximation? Why or why not? </dd>
 
     </dl>
   </div>
