--- a/math154/calculus1_increasing_decreasing_concavity.html
+++ b/math154/calculus1_increasing_decreasing_concavity.html
@@ -25,7 +25,7 @@ $(function () {
   <h1>Calc I Increasing/Decreasing Functions and Concavity</h1>
 
 <hr>
-
+<P>Many thanks to <a href="https://www.uwstout.edu/directory/gongx">Dr. Gong</a> for sharing her videos.
 <!--
 
 
