--- a/math154/calc1home.html
+++ b/math154/calc1home.html
@@ -52,6 +52,7 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_linear_approximations_differentials.html">Linear approximations and differentials</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_mean_value_theorem.html">Mean value theorem</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_optimization.html">optimization</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_increasing_decreasing_concavity.html">Increasing and Decreasing functions and concavity</a>
 </ul>
 
 
