--- a/math154/calc1home.html
+++ b/math154/calc1home.html
@@ -55,6 +55,7 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_increasing_decreasing_concavity.html">Increasing and Decreasing functions and concavity</a>
 <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_limits_with_infinity.html">limits with infinity</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_lhopitals_rule.html">l'Hopital's rule</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_more_optimization.html">more optimization</a>
 </ul>
 
 
