--- a/calc1home.html
+++ b/calc1home.html
@@ -30,23 +30,35 @@
 
 <ul>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_algebra_review.html">review material</a>
-  <!--<li><a href="https://tyler-skorczewski-math.github.io/math154/3dplots.html">functions in multi dimensions</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/partial_derivatives.html">partial derivatives</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/tangent_planes.html">tangent planes</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/gradient.html">gradients</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/MVoptimization.html">optimization</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/lagrange_multipliers.html">lagrange multipliers</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/double_integrals.html">double integrals</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/polar_integrals.html">polar integrals</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/triple_integrals.html">triple integrals</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/cylindrical_spherical_integrals.html">cylindrical and spherical integrals</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/centers_of_mass_3d.html">centers of mass</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/vvf_158.html">vector valued functions</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/vector_fields.html">vector fields</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/conservative_fields_greens_thm.html">conservative fields and Green's theorem</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/div_curl.html">divergence and curl</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math154/MV_FTOC.html">fundamental theorems of calculus</a>
-  -->
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_functions.html">functions</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_inverses.html">inverses</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_trig_review.html">trigonometry review</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_exp_log_functions.html">Exponential and logarithmic functions</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/logscale_plots.html">logscale plots</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_intro_calculus_and_limits.html">Calculus preview</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_limits.html">Limits</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_continuity.html">Continuity</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_epsilondelta_limits.html">Formal Limits</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_limit_def_derivative.html">Limit definition of derivative</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivative_function.html">Derivative as a function</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivative_rules.html">Derivative rules</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivative_applications1.html">Some applications of the derivative</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_trig_derivatives.html">Trigonometric derivative</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_chain_rule.html">chain rule</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_log_exp_derivatives.html">derivatives of logs and exponentials</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_derivatives_of_inverses.html">derivatives of inverses</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_implicit_differentiation.html">Implicit differentiation</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_related_rates.html">Related rates</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_linear_approximations_differentials.html">Linear approximations and differentials</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_mean_value_theorem.html">Mean value theorem</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_optimization.html">optimization</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_increasing_decreasing_concavity.html">Increasing and Decreasing functions and concavity</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_limits_with_infinity.html">limits with infinity</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_lhopitals_rule.html">l'Hopital's rule</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_more_optimization.html">more optimization</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_newtons_method.html">Newton's method</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_intro_integration.html">Introduction to integration</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_FTOC.html">Fundamental Theorem of Calculus</a>
 </ul>
 
 
