--- a/math154/calc1home.html
+++ b/math154/calc1home.html
@@ -57,6 +57,8 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_lhopitals_rule.html">l'Hopital's rule</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_more_optimization.html">more optimization</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_newtons_method.html">Newton's method</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_intro_integration.html">Introduction to integration</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_FTOC.html">Fundamental Theorem of Calculus</a>
 </ul>
 
 
