--- a/math154/calc1home.html
+++ b/math154/calc1home.html
@@ -59,6 +59,9 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_newtons_method.html">Newton's method</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_intro_integration.html">Introduction to integration</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_FTOC.html">Fundamental Theorem of Calculus</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_indefinite_integrals.html">Indefinite Integrals</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_usubstitution.html">U-substitution</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math154/calculus1_exp_log_integrals.html">Integrals with exponential and logarithmic functions</a>
 </ul>
 
 
