--- a/math154/calculus1_exp_log_integrals.html
+++ b/math154/calculus1_exp_log_integrals.html
@@ -22,7 +22,7 @@ $(function () {
 </head>
   <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
 
-  <h1>Calc I U-Substitution</h1>
+  <h1>Calc I Integrals with exponential and logarithmic forms</h1>
 
 <hr>
 
