--- a/math154/starwars_optimizationex.html
+++ b/math154/starwars_optimizationex.html
@@ -230,7 +230,7 @@ h1 sub
 </head>
 <body>
 
-<p id="start">A short time ago in a classroom very, very close&hellip;</p>
+<p id="start">A short time ago in a home office not that far away&hellip;</p>
 
 <h1>CALCULUS<sub>& Analytic Geometry</sub></h1>
 
