--- a/starwarsexampleDE.html
+++ b/starwarsexampleDE.html
@@ -248,7 +248,7 @@ h1 sub
 	<P>This is because of the damping or friction
 	<P>term, \(b >0\).
 
-  <P>Our next to find a solution of this DE
+  <P>Our next task to find a solution of this DE
 	<P>would be to use the method of
 	<P> undertermined coefficients to find a particular
 	<P>solution, \(x_p\).
