--- a/Math123/morechapter5.html
+++ b/Math123/morechapter5.html
@@ -43,7 +43,7 @@ $(function () {
       <li><b>Annuities</b>
         <ul>
         <li>future value: \(\displaystyle FV = R \frac{(1+i)^n - 1}{i} \)<br><br>
-        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^n}{i}\right]\)<br>
+        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^{-n}}{i}\right]\)<br>
         </ul>
       <li><b>Amortization</b>
         <ul>
