--- a/other/quests/quest4/n6.html
+++ b/other/quests/quest4/n6.html
@@ -15,7 +15,7 @@ document.getElementById('error').innerHTML='Try Again!';
 
 <body style="width:600px; padding-left: 1cm; padding-bottom:10cm">
 <P>Find the last fairy where this picture was taken!<br>
-<img src="./p6a.jpg" height=400 ><img src="./p6.jpg" height=400 >
+<img src="./p6.jpg" height=400 >
 <br><br>
 <form method="get" action="end.html">
     <button type="submit">Finished!</button>
